--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,3 +1,14 @@
+Metrics/BlockLength:
+  Exclude:
+    - 'spec/**/*'
+
+Metrics/MethodLength:
+  CountComments: false
+  Max: 15
+
 Naming/FileName:
   Exclude:
     - doorman-bot.rb
+
+Style/TrailingCommaInLiteral:
+  EnforcedStyleForMultiline: consistent_comma
